src/About/About.scss
@import '../SCSS/media-queries';
@import '../SCSS/variables';

$image-margin: 2em;

main {
    // animation: fade-in 1s ease-out both 0.3s;
    // -webkit-animation: fade-in 1s ease-out both 0.3s;
    // -moz-animation: fade-in 1s ease-out both 0.3s;
    // -o-animation: fade-in 1s ease-out both 0.3s;
}

@keyframes fade-in {
    from {opacity: 0%;}
    to {opacity: 100%;}
}

.about_banner {
    width: 90%;
    height: 70vh;
    margin: $image-margin auto;
    position: relative;
    border-bottom: 1px solid #000;
    padding-bottom: 1%;
    @include lg {
        height: 60vh;
    }
    @include md {
        height: 50vh;
    }
    @include sm {
        height: 40vh;
    }
    figure {
      position: absolute;
      width: 100%;
      height: 70vh;
      opacity: 0;
      @include lg {
        height: 60vh;
        }
        @include md {
            height: 50vh;
        }
        @include sm {
            height: 40vh;
        }
        &:nth-child(1) {
          animation: xfade 16s 12s infinite;
          @include lg {
              height: 60vh;
          }
          @include md {
              height: 50vh;
          } 
          @include sm {
              height: 40vh;
          }   
        }
        &:nth-child(2) {
          animation: xfade 16s 8s infinite;
          @include lg {
              height: 60vh;
          }
          @include md {
              height: 50vh;
          } 
          @include sm {
              height: 40vh;
          }   
        }
        &:nth-child(3) {
          animation: xfade 16s 4s infinite;
          @include lg {
              height: 60vh;
          }
          @include md {
              height: 50vh;
          } 
          @include sm {
              height: 40vh;
          }   
        }
        &:nth-child(4) {
          animation: xfade 16s 0s infinite;
          @include lg {
              height: 60vh;
          }
          @include md {
              height: 50vh;
          } 
          @include sm {
              height: 40vh;
          }   
        }
        .about_img {
            width: 100%;
            height: 70vh;
            background-size: cover;
            background-attachment: fixed;
            background-position: 50% 50%;
            background-repeat: no-repeat;
            @include lg {
                height: 60vh;
            }
            @include md {
                height: 50vh;
                background-attachment: inherit;
            }  
            @include sm {
                height: 40vh;
                background-attachment: inherit;
            }  
        }
        figcaption {
          position: absolute;
          bottom: 0;
          visibility: hidden;
          color: $text_color;
          background: rgba(0, 0, 0, 0.3);
          font-size: .8rem;
          padding: 5px 10px;
          opacity: 0;
          transition: opacity .5s;
          &:hover figure figcaption {
              visibility: visible;
            transition: opacity .5s;
            opacity: 1;
          }
        }
    }
}

@keyframes xfade{
  0% {opacity: 0;}
  25% {opacity: 1;}
  50% {opacity: 0;}
  100% {opacity: 0;}
}

//temp size for all sections
.section_about-why,
.section_about-history,
.section_about-mission {
    height: 470px;
    @include lg {
        height: 520px;
    }
    @include md {
        height: 420px;
    }
    @include sm {
        height: 400px;
    }
    @include xs {
        height: 385px;
    }
}

.about_h2,
.about_h2-why {
    font-size: 2.2em;
    text-align: center;
    margin-bottom: 1%;
    // @include xl {
    //     font-size: 3em;
    // }
    @include lg {
        font-size: 2.4em;
    }
    @include md {
        font-size: 1.8em;
    }
    @include sm {
        font-size: 1.2em;
    }
}

.about_h2-underline {
    background-color: orange;
    width: 25%;
    margin: 0 37.5% 2%;
    height: 1%;
    @include lg {
        width: 33%;
        margin: 0 34.5% 2%;
    }
    @include md {
        width: 35%;
        margin: 0 32.5% 2%;
    }
    @include sm {
        width: 34%;
        margin: 0 34.5% 2%;
    }
    @include xs {
        width: 64%;
        margin: 0 17.5% 2%;
    }

}

.about_paragraph {
    width: 80%;
    margin-left: 8%;
    margin-right: 8%;
    color: $main_color;
    font-weight: 500;
    line-height: 1.2;
    @include lg {
        width: 90%;
    }
    @include md {
        margin-left: 6%;
        margin-right: 6%;
    }
    @include sm {
        width: 100%;
        margin-left: 2%;
        margin-right: 2%;
    }
}

.about_paragraph,
.testimonials_description {
    font-size: 1.5em;
    text-align: center;
    @include xl {
        font-size: 2.5em;
    }
    @include lg {
        font-size: 1.5em;
    }
    @include md {
        font-size: 1.2em;
    }
    @include sm {
        font-size: 1em
    }
    @include xs {
        font-size: 1em;
    }
}

figure {
	margin: 0;
    padding: 0;
    @include lg {
        height: 60vh;
    }
    @include md {
        height: 50vh;
    }
    @include sm {
        height: 40vh;
    }
}

.btn {
	background: orange;
}

.testimonial_content {
	font-size: 1.4em;
    margin-top: 5%;
    line-height: 1.2;
    color: $main_color;
    font-weight: 700;
    padding: 0 5% 0 5%;
    @include xl {
        font-size: 2.5em;
    }
    @include lg {
        font-size: 1.5em;
    }
    @include md {
        font-size: 1.2em;
    }
    @include sm {
        font-size: 1em
    }
    @include xs {
        font-size: 1em;
    }
}

.aside_testimonial {
    float: right;
    position: relative;
    right: 14%;
    margin-top: 6%;
    width: 400px;
    @include lg {
        right: 0%;
        width: auto;
        margin: 17% 0% 4%;
    }
    @include md {
        width: auto;
        margin: 17% 0% 4%;
    }
    @include sm {
        width: auto;
        margin: 22% 0% 4%;
    }
    @include xs {
        width: auto;
        margin: 60% 0% 4%;
    }
}

.section_about-testimonials {
	overflow: hidden;
	width: 460px;
	left: 12em;
    padding: 1em 0;
    position: relative;
    text-align: center;
    border-radius: 3px;
	box-shadow: inset 0 0 1.5em 0 #000;
    background-color: #ffa5009e;
    margin-top: 3%;
    @include lg {
        left: 15em;
    }
    @include md {
        left: 10em
    }
    @include sm {
        left: 3em;
    }
    @include xs {
        left: 0em;
    }
}

.testimonials_description {
    margin-top: 5%;
    color: $main_color;
    line-height: 1.7;
    font-weight: 500;
    @include xl {
        font-size: 2.5em;
    }
    @include lg {
        font-size: 1.7em;
    }
    @include md {
        font-size: 1.4em;
    }
    @include sm {
        font-size: 1.2em
    }
    @include xs {
        font-size: 1.2em;
    }
}

.about_testimonials {
	width: 1760px;
	height: 400px;
	position: relative;
}

.about_testimonial-underline {
    background-color: orange;
    width: 60%;
    margin: 0 19.5% 2%;
    height: 2.5%;
    position: absolute;
}

.testimonial {
	float:left;
	width: 400px;
	position: relative;
	padding: 0 20px;
    height: 100%
}

.input {
	position: absolute;
	clip:rect(0,0,0,0);
}

.btn {
	padding:0.3em;
	cursor: pointer;
    text-align: center;
    &:hover {
        color:#fff;
        text-shadow:0 0 0.1em #eee;
    }
}


.btn-inside {
	position: absolute;
	box-shadow: 0 0 0.2em #000;
	border-radius: 50%;
	font-size:2em;
	font-family: arial;
	height: 1em;
	width: 1em;
	line-height: 0.9;
	top:180px;
}

.btn-outside {
	padding:0 1em;
	margin-top:1em;
}

.next {
	left: 13em;
}

.prev {
	left:-0.6em;
}

.btn-inside {
	display:none;
}

#go1:checked ~ .about_testimonials #p1 .btn-inside,
#go2:checked ~ .about_testimonials #p2 .btn-inside,
#go3:checked ~ .about_testimonials #p3 .btn-inside,
#go4:checked ~ .about_testimonials #p4 .btn-inside {
	display:inline-block;
}

#go1:checked ~ .go1,
#go2:checked ~ .go2,
#go3:checked ~ .go3,
#go4:checked ~ .go4 {
	box-shadow: inset 0 0 1em rgba(255,255,255,0.5);
}

/* animations */
.btn,
.about_testimonials {
	-webkit-transition: 0.4s;
	-moz-transition: 0.4s;
	transition: 0.4s;
}

#go1:checked ~ .about_testimonials {
	-webkit-transform: translate3d(0,0,0);
	-moz-transform: translate3d(0,0,0);
	transform: translate3d(0,0,0);
}

#go2:checked ~ .about_testimonials {
	-webkit-transform: translate3d(-440px,0,0);
	-moz-transform: translate3d(-440px,0,0);
	transform: translate3d(-440px,0,0);
}

#go3:checked ~ .about_testimonials {
	-webkit-transform: translate3d(-880px,0,0);
	-moz-transform: translate3d(-880px,0,0);
	transform: translate3d(-880px,0,0);
}

#go4:checked ~ .about_testimonials {
	-webkit-transform: translate3d(-1320px,0,0);
	-moz-transform: translate3d(-1320px,0,0);
	transform: translate3d(-1320px,0,0);
}

.mission_links-holder {
    padding: 1.5% 0 0 17%;
    font-size: 1.5em;
    color: $main_color;
    font-weight: 500;
    line-height: 1.7;
    @include xl {
        font-size: 2.5em;
    }
    @include lg {
        font-size: 1.5em;
    }
    @include md {
        font-size: 1.2em;
    }
    @include sm {
        font-size: 1em
    }
    @include xs {
        font-size: 1em;
    }
    .about_li {
        display: list-item;
    }
}

.about_mission-links {
    margin: 0 5px 0 5px;
    text-decoration: none;
    transition: all .2s ease;
    font-weight: 500;
    color: $accent_color;
    &:hover {
        color: $main_color;
        cursor: pointer;
        transform: scale(1.1);
    }
}

